objects/Lead.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fluidoconnect1__Survey_Link_For_Mail_Template__c</fullName>
        <label>Survey Link For Mail Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>B2B_myynti_jono_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>pi__comments__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>B2B-myynti jono</label>
        <queue>B2B_myynti_jono</queue>
    </listViews>
    <listViews>
        <fullName>Kaikki_aktiiviset_massa</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Lead__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Kaikki aktiiviset Massaliidit</label>
        <language>fi</language>
    </listViews>
    <listViews>
        <fullName>Kaikki_aktiiviset_yhteys</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Kaikki aktiiviset Yhteyshenkilöliidit</label>
        <language>fi</language>
    </listViews>
    <listViews>
        <fullName>Kaikki_liidit</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_country__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>pi__score__c</columns>
        <columns>Lead_Temperature__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>MARK_7_paivaa</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Customers_Note__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>micr,arge,mark</value>
        </filters>
        <label>MARK, 7 päivää (luotu)</label>
        <language>en_US</language>
        <sharedTo>
            <role>CSFMarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MARK_Triplan_liidit</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Marketing_Name__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>Shopping_Center_Business_Fields__c</columns>
        <columns>Type_of_Space__c</columns>
        <columns>Need_of_Space_m__c</columns>
        <columns>Campaign_Member_Description__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>Campaign_Name__c</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Business_Premises</value>
        </filters>
        <label>MARK: Tripla markkinointirekisteri</label>
        <language>fi</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BRD_Vuokraus</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSFMarketingTeam</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Tripla_johto</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MARK_liidit</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Campaign_Member_Description__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>micr,arge,mark</value>
        </filters>
        <label>MARK. uudet liidit</label>
        <language>en_US</language>
        <sharedTo>
            <role>CSFMarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MARKei_luettu</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Campaign_Member_Description__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>,micr,arge,mark,jmtieto,ababi,lsavi,ivalt</value>
        </filters>
        <label>MARK. ei luettu</label>
        <language>en_US</language>
        <sharedTo>
            <role>CSFMarketingTeam</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MoT_Liiketilat</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>pi__comments__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>MoT Liiketilat</label>
        <queue>MoT_liiketilat_jono</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Leads_Last_30_Days</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Tenant_Candidate</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>New Leads Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Omat_liidit</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Muunnettu</value>
        </filters>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>Preferred_Qualified_Rental_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Tenant_Candidate</value>
        </filters>
        <label>Preferred &amp; Qualified Rental Leads</label>
    </listViews>
    <listViews>
        <fullName>Sales_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Lead_Origin__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Item_of_Interest__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>Sales Queue</label>
        <queue>Sales_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tenant_candidate_leads_in_last_24_hours</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Campaign__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <label>Tenant candidate leads in last 24 hours</label>
    </listViews>
    <listViews>
        <fullName>Tenant_candidates</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Campaign__c</columns>
        <columns>Apartment_Sales_Promotion__c</columns>
        <columns>Rental_Apartment_Promotion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Tenant_Candidate</value>
        </filters>
        <label>Tenant candidates</label>
        <sharedTo>
            <role>HO_Housing_Finland_and_CEE</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>B2C_Housing_Sales</fullName>
        <active>true</active>
        <businessProcess>YIT Rental Process</businessProcess>
        <label>B2C Housing Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Premises</fullName>
        <active>true</active>
        <businessProcess>YIT Lead Process</businessProcess>
        <label>2. Business Premises - RED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Infra_Services</fullName>
        <active>true</active>
        <businessProcess>YIT Lead Process</businessProcess>
        <label>3. Infra Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Municipality_Services</fullName>
        <active>true</active>
        <businessProcess>YIT Lead Process</businessProcess>
        <label>4. Municipality Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tenant_Candidate</fullName>
        <active>true</active>
        <businessProcess>YIT Rental Process</businessProcess>
        <description>Leads of tenant candidates applying for rental apartment</description>
        <label>Tenant Candidate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workery</fullName>
        <active>true</active>
        <businessProcess>YIT Lead Process</businessProcess>
        <label>Workery+</label>
    </recordTypes>
    <recordTypes>
        <fullName>YIT_Lead</fullName>
        <active>true</active>
        <businessProcess>YIT Lead Process</businessProcess>
        <label>1. YIT Lead</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Address_Country_Required</fullName>
        <active>false</active>
        <description>Address Country field is required.</description>
        <errorConditionFormula>LEN(Country)&lt;2</errorConditionFormula>
        <errorMessage>Lead: Address Country is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Agency_Filled</fullName>
        <active>true</active>
        <description>Check that agency field is filled for the corresponding lead source.</description>
        <errorConditionFormula>AND( ISPICKVAL( LeadSource , &quot;Real Estate Agent&quot;), LEN( Real_Estate_Agent__c ) &lt; 1)</errorConditionFormula>
        <errorDisplayField>Real_Estate_Agent__c</errorDisplayField>
        <errorMessage>Please enter the real estate agent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Agency_Not_Filled</fullName>
        <active>true</active>
        <description>Agency field should not be filled if other lead source is set.</description>
        <errorConditionFormula>AND( NOT(ISPICKVAL( LeadSource , &quot;Real Estate Agent&quot;)), LEN( Real_Estate_Agent__c ) &gt; 0)</errorConditionFormula>
        <errorDisplayField>Real_Estate_Agent__c</errorDisplayField>
        <errorMessage>Agency field should not be filled for this lead source.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Agency_Validity</fullName>
        <active>true</active>
        <description>Check that agency type is valid.</description>
        <errorConditionFormula>AND(ISPICKVAL( LeadSource , &quot;Real Estate Agent&quot;), IF(LEN( Real_Estate_Agent__c )&lt; 1, false, NOT(INCLUDES(Real_Estate_Agent__r.Type__c, &quot;Real Estate Agency&quot;))))</errorConditionFormula>
        <errorDisplayField>Real_Estate_Agent__c</errorDisplayField>
        <errorMessage>Account&apos;s type is not valid. Please check.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FonectaIDValidation</fullName>
        <active>false</active>
        <description>Check that fonecta ID is valid: contains 7 characters</description>
        <errorConditionFormula>AND(NOT(LEN(Fonecta_ID__c)=0),NOT(LEN(Fonecta_ID__c) = 7)) || AND(NOT(ISNUMBER(Fonecta_ID__c)), NOT(ISBLANK(Fonecta_ID__c)))</errorConditionFormula>
        <errorDisplayField>Fonecta_ID__c</errorDisplayField>
        <errorMessage>Invalid fonecta ID: should contain 7 characters.	Virheen sijainti Fonecta ID</errorMessage>
    </validationRules>
</CustomObject>